[tool.poetry]
name = "fedlab-feminist"
version = "0.1.0"
description = ""
authors = ["futabato <01futabato10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Pillow = "<=9.5.0"
fedlab = "^1.3.0"
spacy = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
